# searching-algorithms

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py  settings.py
src/game/: __init__.py  arena.py
src/game/snake/: __init__.py  ai.py  game.py
src/game/tictactoe/: __init__.py  ai.py  game.py
src/utils/: __init__.py  pathfinding.py
tests/: test_snake_ai.py  test_tictactoe_ai.py
