[tool.poetry]
name = "pathfinding-arena"
version = "0.1.0"
description = "A game featuring pathfinding algorithms and AI for Snake and Tic-Tac-Toe."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"